Användare synkar → last_sync_at uppdateras → 90 dagar börjar om                                       ↓                       Efter 90 dagar utan sync                                       ↓                       Cron job kl 03:00 → Raderar all data permanent
  Aktiva användare som synkar regelbundet behåller sin data för evigt. Övergivna listor städas bort automatiskt.

--- a/workers/api/wrangler.toml
+++ b/workers/api/wrangler.toml
@@ -48,3 +48,7 @@ ALLOWED_ORIGINS = "https://staging.prioritiz.pages.dev,http://localhost:5173"
 # Observability
 [observability]
 enabled = true
+
+# Cron triggers for scheduled tasks
+[triggers]
+crons = ["0 3 * * *"]  # Run daily at 3 AM UTC - cleanup expired users
